# Bookstore-2024

./: .gitignore  CMakeLists.txt  t2.cpp
docs/: 总体设计.md  设计文档.md  需求文档.md
include/: BlockRiver.hpp  MemoryRiver.hpp  binable.hpp  block_memory.hpp  kvdb.cpp  kvdb.hpp  randomdb.cpp  randomdb.hpp  seqdb.cpp  seqdb.hpp
src/: kvdb.cpp  kvdb_instance.cpp  main.cpp  models.hpp  operations.cpp  randomdb_instance.cpp  seqdb_instance.cpp
submission/: t2.cpp  t2b.cpp
tests/: 2545.py  kvdb_instance.cpp  randomdb_instance.cpp  seqdb_instance.cpp  t2.bash
tests/2545/: 2.tst  t2.bash
tests/seq/: 1.in  1.out  mkt.py
